--- a/test/curl.html
+++ b/test/curl.html
@@ -7,7 +7,7 @@
     <script src="../node_modules/curl-amd/dist/curl-for-ssjs/curl.js"></script>
     
     <!-- undefine allows to define modules with a universal signature -->
-    <script src="../undefine.js"></script>
+    <script src="../dist/undefine-min.js"></script>
   </head>
   <body>
     <h1>Fibonacci</h1>
