--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <title>Fibonacci</title>
     
     <!-- undefine allows to define modules with a universal signature -->
-    <script src="../undefine.js"></script>
+    <script src="../dist/undefine-min.js"></script>
     
     <!-- insert your statically-loaded modules here, or bundle them with a minifier -->
     <script src="fibonacci.js"></script>
