--- a/test/require.html
+++ b/test/require.html
@@ -7,7 +7,7 @@
     <script src="../node_modules/requirejs/require.js"></script>
     
     <!-- undefine allows to define modules with a universal signature -->
-    <script src="../undefine.js"></script>
+    <script src="../dist/undefine-min.js"></script>
   </head>
   <body>
     <h1>Fibonacci</h1>
